CREATE TABLE person (
	id bigint GENERATED BY DEFAULT AS IDENTITY,
	first_name varchar(255),
	last_name varchar(255),
	CONSTRAINT pk_person PRIMARY KEY(id)
);

CREATE TABLE post (
	id bigint GENERATED BY DEFAULT AS IDENTITY,
	title varchar(255),
	content varchar(255),
	CONSTRAINT pk_post PRIMARY KEY(id)
);

CREATE TABLE comment (
	content varchar(255),
	post_id bigint,
	CONSTRAINT fk_comment_on_post FOREIGN KEY(post_id) REFERENCES post(id)
);

CREATE TABLE photo (
	id bigint GENERATED BY DEFAULT AS IDENTITY,
	url varchar(255),
	CONSTRAINT pk_photo PRIMARY KEY (id)
);

CREATE TABLE photo_tag (
	title varchar(255),
	photo_id bigint,
	photo_key bigint,
	CONSTRAINT fk_photo_tag_on_photo FOREIGN KEY(photo_id) REFERENCES photo(id)
);

CREATE TABLE product(
	external_id uuid NOT NULL,
	sku varchar(255) NOT NULL,
	title varchar(255) NOT NULL,
	price double precision NOT NULL,
	CONSTRAINT pk_product PRIMARY KEY (external_id, sku)
);

CREATE TABLE order_(
	id uuid NOT NULL,
	price double precision NOT NULL,
	CONSTRAINT pk_order PRIMARY KEY (id)
);

CREATE TABLE order_item(
	product_external_id uuid NOT NULL,
	product_sku varchar(255) NOT NULL,
	order__id uuid NOT NULL,
	quantity bigint NOT NULL,
	CONSTRAINT fk_order_item_on_product FOREIGN KEY (product_external_id, product_sku) REFERENCES product(external_id, sku),
	CONSTRAINT fk_order_item_on_order FOREIGN KEY (order__id) REFERENCES order_(id)
);
