@startuml
namespace OrderAggregate {
	Order *-- OrderItem : items

    class Order {
    	List<OrderItem> items
    	Double price
    }

    class OrderItem {
    	ProductId productId
    	Long quantity
    }
}

namespace ProductAggregate {
	Product o-- OrderItem: productId

	class Product {
		ProductId id
		String title
		Double price
	}

	class ProductId {
    	String externalId
    	String sku
    }

}
@enduml
